--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "@lit-protocol/constants": "^7.0.0",
     "@lit-protocol/contracts": "^0.0.71",
+    "@lit-protocol/contracts-sdk": "^7.0.0",
     "@lit-protocol/lit-node-client-nodejs": "^7.0.0",
     "ethers": "^5.7.2",
+    "ipfs-only-hash": "^4.0.0",
     "node-localstorage": "^3.0.5"
   },
   "devDependencies": {
