--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "lit-oracle-kit",
+  "name": "@lit-protocol/lit-oracle-kit",
   "version": "0.1.0",
   "description": "SDK for executing Lit Actions as oracles and writing to chain",
   "main": "dist/lit-oracle-kit.js",
   "types": "dist/lit-oracle-kit.d.ts",
   "type": "module",
+  "exports": {
+    ".": "./dist/lit-oracle-kit.js"
+  },
   "scripts": {
     "build": "tsc",
     "test": "jest",
@@ -22,6 +25,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.24",
+    "@types/node-localstorage": "^1.3.3",
     "dotenv": "^16.4.5",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
