--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
   "exports": {
     ".": "./dist/lit-oracle-kit.js"
   },
-  "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "files": [
     "dist"
   ],
   "scripts": {
     "build": "tsc",
     "test": "jest",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "docs": "typedoc src/lit-oracle-kit.ts --out docs"
   },
   "dependencies": {
     "@lit-protocol/constants": "^7.0.0",
@@ -33,6 +36,7 @@
     "dotenv": "^16.4.5",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
+    "typedoc": "^0.26.11",
     "typescript": "^5.3.3"
   }
 }
